# acoes-dashboard

./: .env.example  .gitignore  pyproject.toml
app/: config.py  main.py
